--- a/public/_gatsby/slices/_gatsby-scripts-1.html
+++ b/public/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-31dc2eb328c180d5c1ef.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-e8c1b3b78c9e70c2201b.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-59e8ade1af3d75aca0a7.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-21914d4a2d49f02dad53.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-e8c1b3b78c9e70c2201b.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-cc985c8d5e2419688488.js\"],\"component---src-pages-technical-information-js\":[\"/component---src-pages-technical-information-js-f52125cebca75d0d4090.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="baa0abe003099dc48baa";</script><script src="/webpack-runtime-780d60b339554947ae57.js" async></script><script src="/framework-3b4e04396e2b2a279564.js" async></script><script src="/app-31dc2eb328c180d5c1ef.js" async></script>
+        <script>window.___webpackCompilationHash="d9ca73e142e67b2e35d5";</script><script src="/webpack-runtime-05fc9163931cbd588ebf.js" async></script><script src="/framework-3b4e04396e2b2a279564.js" async></script><script src="/app-21914d4a2d49f02dad53.js" async></script>
